--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Test and Build
 
 permissions:
   contents: read
@@ -8,16 +8,42 @@ on:
   push:
     branches: [ main ]
     paths:
+      - 'round_1/**/*.go'
       - 'round_1/Dockerfile'
       - '.github/workflows/docker-build.yml'
   pull_request:
     branches: [ main ]
     paths:
+      - 'round_1/**/*.go'
       - 'round_1/Dockerfile'
       - '.github/workflows/docker-build.yml'
 
 jobs:
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '^1.20'
+        
+    - name: Run tests
+      working-directory: ./round_1
+      run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+      
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./round_1/coverage.txt
+        fail_ci_if_error: true
+
   build:
+    needs: test
     runs-on: ubuntu-latest
     
     steps:
